Fix scrollbar not showing for thread table and fix how rows are displayed when not enough rows to fill up table.
PiperOrigin-RevId: 282581920

--- a/client/app/sidebar/thread_table/thread_table.css
+++ b/client/app/sidebar/thread_table/thread_table.css
@@ -7,9 +7,15 @@
   width: 100%;
 }
 
-.mat-table {
+.thread-table-container {
   height: calc(100% - 95px);
   overflow: auto;
+  width: 100%;
+  display: block;
+}
+
+.mat-table {
+  width: 100%;
 }
 
 .sched-events-mat-table {
